# FootBall_manager

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  main.py  mypy.ini  pull_request_template.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml.disabled  deploy-backend.yml.disabled  deploy-frontend.yml.disabled
app/: config.py  main.py  schemas.py
app/routers/: players.py  teams.py
data/: players.csv  players.json
frontend/: package-lock.json  package.json
frontend/src/: constants.js  index.css
frontend/src/components/common/: Badge.jsx  Button.jsx  Card.jsx  EmptyState.jsx  Loader.jsx  Modal.jsx
frontend/src/components/dashboard/: DashboardStats.jsx  StatCard.jsx
frontend/src/components/layout/: Container.jsx  Navbar.jsx  SectionTitle.jsx
frontend/src/components/players/: AddPlayerModal.jsx  AvailabilityToggle.jsx  DeletePlayerModal.jsx  EditPlayerModal.jsx  PlayerForm.jsx  PlayerRow.jsx  (+4 more)
frontend/src/constants/: tiers.js
frontend/src/hooks/: usePlayers.js  useTeams.js
frontend/src/pages/: Home.jsx
frontend/src/services/: api.js  playerService.js  teamService.js
frontend/src/utils/: calculateStats.js  formatTier.js  playerStats.js
src/: models.py  player_editor.py  player_importer.py  player_manager.py  team_generator.py  utils.py
src/database/: mongo.py
src/repositories/: factory.py  json_repository.py  mongo_repository.py  repository.py
tests/backend/: conftest.py  test_models.py  test_player_editor.py  test_player_importer.py  test_player_manager.py  test_players_router.py  test_team_generator.py  test_teams_router.py  test_utils.py
tests/fixtures/: players.json
(+5 files in other folders)
