[project]
name = "football-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.5.1",
    "fastapi>=0.139.2",
    "mypy>=2.3.0",
    "ruff>=0.15.22",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "coverage>=7.15.2",
    "faker>=40.31.0",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]
