[project]
name = "football-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "coverage>=7.15.2",
    "faker>=40.31.0",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "mypy>=2.3.0",
    "ruff>=0.15.22",
    "black>=26.5.1",
]



[tool.ruff]

line-length = 88
target-version = "py311"

exclude = [
    "frontend",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]

select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

ignore = [
    "E501",
]

[tool.ruff.format]

quote-style = "double"

indent-style = "space"

line-ending = "lf"


[tool.coverage.run]

source = [
    "src",
    "app",
]

omit = [
    "tests/*",
]

[tool.coverage.report]

show_missing = true

skip_empty = true

[tool.black]

line-length = 88

target-version = [
    "py311",
]
